--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-asgiref==3.2.3
-autopep8==1.4.4
-Django==3.0.1
-pycodestyle==2.5.0
-pytz==2019.3
-sqlparse==0.3.0
-Unipath==1.1
-dj-database-url==0.3.0
-python-decouple==2.3
+asgiref
+autopep8
+Django
+pycodestyle
+pytz
+sqlparse
+Unipath
+dj-database-url
+python-decouple
+gunicorn
